manifests/base/ingress-auth.yaml
# ingress = regra de roteamento 
# arquivo responsável pelas regras de roteamento em /auth/**

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-auth-ingress
  # Nome interno da regra dentro do k8s 
  annotations:
  # regras extras específicas do kong

    konghq.com/strip-path: "false"
    # define se o kong remove o prefixo /auth antes de mandar a resquest pra frente

    konghq.com/plugins: cors,rate-limiting-auth
    # lista de regras aplicadas nesse path 

spec:
  ingressClassName: kong
  # define que o kong como responsavel pela regra pro k8s

  rules:
    - http:
        paths:
          - path: /auth
            # define qualquer url que começa com /auth para cair nessa regra

            pathType: Prefix
            # compara só o início da url

            backend:
              service:
                name: api-auth
                # nome do service, dentro do k8s, que a request vai pra frente

                port:
                  number: 8081
                  # Porta que api-auth escuta
