manifests/base/ingress-messenger.yaml
# ingress = regra de roteamento 
# arquivo responsável pelas regras de roteamento em /messenger/**

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-messenger-ingress
  annotations:
    konghq.com/strip-path: "false"
    # define se o kong remove o prefixo /messaging antes de mandar a resquest pra frente

    konghq.com/plugins: cors,rate-limiting-persistence
    # lista de regras aplicadas nesse path 
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /messaging
            pathType: Prefix
            # Qualquer URL que comece com /messaging cai aqui
            backend:
              service:
                name: api-messenger
                # nome do service, dentro do k8s, que a request vai pra frente
                port:
                  number: 8080
